# claude-fleet

./: .gitignore  CLAUDE.md  README.md  components.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
.planning/: STATE.md
.planning/phases/01-project-init/: 01-project-init-SUMMARY.md
.planning/phases/03-running-tab/: phase-03-running-tab-SUMMARY.md
.planning/phases/04-management-list/: phase-04-management-list-SUMMARY.md
.planning/phases/05-management-detail/: phase-05-management-detail-SUMMARY.md
.planning/phases/06-new-session/: phase-06-new-session-SUMMARY.md
docs/: 2026-07-20-windows-terminal-jump-design.md  KNOWN_ISSUES.md  hooks-setup.md  worktree-roadmap.md
docs/hooks/: hook_writer.py  settings.example.json  verification-guide.md
docs/research/: claude-session-storage.md
docs/superpowers/plans/: 00-overview.md  2026-04-30-incremental-state-management.md  2026-05-08-terminal-config.md  2026-05-12-notification-plan.md  2026-05-14-path-hover-enhancement.md  2026-05-18-feature-enhancement.md  2026-05-27-favorite-path-pin-delete.md  2026-06-18-worktree-backend-phase1.md  2026-06-18-worktree-ui.md  2026-06-25-running-git-info.md  (+13 more)
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  session.rs  session_commands.rs  sound.rs  terminal.rs  update.rs  worktree.rs
src-tauri/src/db/: favorite_paths.rs  favorites.rs  migration.rs  mod.rs  schema.rs  sessions_meta.rs  settings.rs  tracked_repos.rs  worktrees.rs
src-tauri/src/utils/: claude_data.rs  claude_session.rs  hooks.rs  logger.rs  mod.rs  process.rs  running_sessions.rs  session_types.rs  session_utils.rs  sessions_watcher.rs  update_checker.rs  window_manager.rs
src-tauri/src/utils/git/: info.rs  mod.rs  worktree.rs
src-tauri/src/utils/launch/: mod.rs
src/hooks/: index.ts  useNotification.ts  useRunningSessions.ts  useSessionSearch.ts  useSessions.ts  useUpdateChecker.ts
src/services/: claudeSession.ts  dbService.ts  index.ts  notificationService.ts  sessionLaunchService.ts  soundService.ts  terminalService.ts
src/stores/: favoriteStore.ts  index.ts  sessionStore.ts  settingsStore.ts  updateStore.ts
src/types/: conversation.ts  index.ts  session.ts  settings.ts  tauri.d.ts  update.ts  worktree.ts
src/utils/: fuzzySearch.ts  index.ts  pathUtils.ts  timeUtils.ts
(+69 files in other folders)
